# review-business/api/appeal/v1/appeal.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: api/business/v1/business.proto
+// source: api/appeal/v1/appeal.proto
 
 package v1
 
@@ -34,225 +34,6 @@ var (
 	_ = anypb.Any{}
 	_ = sort.Sort
 )
-
-// Validate checks the field values on CreateReplyRequest with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *CreateReplyRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on CreateReplyRequest with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// CreateReplyRequestMultiError, or nil if none found.
-func (m *CreateReplyRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *CreateReplyRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for ReviewID
-
-	// no validation rules for UserID
-
-	if l := utf8.RuneCountInString(m.GetContent()); l < 1 || l > 1024 {
-		err := CreateReplyRequestValidationError{
-			field:  "Content",
-			reason: "value length must be between 1 and 1024 runes, inclusive",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if len(errors) > 0 {
-		return CreateReplyRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// CreateReplyRequestMultiError is an error wrapping multiple validation errors
-// returned by CreateReplyRequest.ValidateAll() if the designated constraints
-// aren't met.
-type CreateReplyRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m CreateReplyRequestMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m CreateReplyRequestMultiError) AllErrors() []error { return m }
-
-// CreateReplyRequestValidationError is the validation error returned by
-// CreateReplyRequest.Validate if the designated constraints aren't met.
-type CreateReplyRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e CreateReplyRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e CreateReplyRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e CreateReplyRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e CreateReplyRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e CreateReplyRequestValidationError) ErrorName() string {
-	return "CreateReplyRequestValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e CreateReplyRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sCreateReplyRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = CreateReplyRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = CreateReplyRequestValidationError{}
-
-// Validate checks the field values on CreateReplyReply with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// first error encountered is returned, or nil if there are no violations.
-func (m *CreateReplyReply) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on CreateReplyReply with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// CreateReplyReplyMultiError, or nil if none found.
-func (m *CreateReplyReply) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *CreateReplyReply) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for ReplyID
-
-	if len(errors) > 0 {
-		return CreateReplyReplyMultiError(errors)
-	}
-
-	return nil
-}
-
-// CreateReplyReplyMultiError is an error wrapping multiple validation errors
-// returned by CreateReplyReply.ValidateAll() if the designated constraints
-// aren't met.
-type CreateReplyReplyMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m CreateReplyReplyMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m CreateReplyReplyMultiError) AllErrors() []error { return m }
-
-// CreateReplyReplyValidationError is the validation error returned by
-// CreateReplyReply.Validate if the designated constraints aren't met.
-type CreateReplyReplyValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e CreateReplyReplyValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e CreateReplyReplyValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e CreateReplyReplyValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e CreateReplyReplyValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e CreateReplyReplyValidationError) ErrorName() string { return "CreateReplyReplyValidationError" }
-
-// Error satisfies the builtin error interface
-func (e CreateReplyReplyValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sCreateReplyReply.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = CreateReplyReplyValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = CreateReplyReplyValidationError{}
 
 // Validate checks the field values on CreateAppealRequest with the rules
 // defined in the proto definition for this message. If any rules are
